@@ -19,13 +19,35 @@
 
 package com.here.xyz.jobs.steps.execution;
 
-import com.here.xyz.jobs.steps.Step;
-import com.here.xyz.jobs.steps.inputs.Input;
-import com.here.xyz.jobs.steps.resources.Load;
-import com.here.xyz.util.service.BaseHttpServerVerticle.ValidationException;
-import java.util.List;
+import static com.here.xyz.jobs.steps.execution.LambdaBasedStep.ExecutionMode.SYNC;
 
-public class RunEmrJob extends Step<RunEmrJob> {
+import com.amazonaws.services.s3.model.AmazonS3Exception;
+import com.amazonaws.services.s3.model.S3ObjectSummary;
+import com.here.xyz.jobs.steps.inputs.Input;
+import com.here.xyz.jobs.steps.outputs.DownloadUrl;
+import com.here.xyz.jobs.steps.resources.Load;
+import com.here.xyz.jobs.util.S3Client;
+import com.here.xyz.util.service.BaseHttpServerVerticle.ValidationException;
+import java.io.BufferedReader;
+import java.io.File;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.nio.file.FileAlreadyExistsException;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Map;
+import java.util.UUID;
+
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
+public class RunEmrJob extends LambdaBasedStep<RunEmrJob> {
+  private static final Logger logger = LogManager.getLogger();
+
   private String applicationId;
   private String executionRoleArn;
   private String jarUrl;
@@ -53,26 +75,86 @@ public class RunEmrJob extends Step<RunEmrJob> {
     return "Runs a serverless EMR job on application " + applicationId;
   }
 
+  //Gets only executed when running locally (see GraphTransformer)
   @Override
   public void execute() throws Exception {
-    //NOTE: As this step is just a "configuration holder", this method should never actually be called
-    throw new RuntimeException("RunEmrJob#execute() was called.");
+    //Create the local target directory in which EMR writes the output
+    String localTmpOutputsFolder = createLocalFolder(S3Client.getKeyFromS3Uri(scriptParams.get(1)), true);
+
+    //Download EMR executable JAR from S3 to local
+    String localJarPath = copyFileFromS3ToLocal(jarUrl);
+    //Copy step input files from S3 to local /tmp
+    String localTmpInputsFolder = copyFolderFromS3ToLocal(S3Client.getKeyFromS3Uri(scriptParams.get(0)));
+
+    List<String> localScriptParams = new ArrayList<>(scriptParams);
+
+    localScriptParams.set(0, localTmpInputsFolder);
+    localScriptParams.set(1, localTmpOutputsFolder);
+    localScriptParams.add("--local");
+
+    sparkParams = sparkParams.replace("$localJarPath$", localJarPath);
+    sparkParams = "java -Xshare:off --add-exports=java.base/java.nio=ALL-UNNAMED "
+            + "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED "
+            + "--add-exports=java.base/java.lang.invoke=ALL-UNNAMED "
+            + "--add-exports=java.base/java.util=ALL-UNNAMED "
+            + sparkParams;
+
+    List<String> emrParams = new ArrayList<>(List.of(sparkParams.split(" ")));
+    emrParams.addAll(localScriptParams);
+
+    logger.info("Start local EMR job with the following params: {} ", emrParams.toString());
+
+    ProcessBuilder processBuilder = new ProcessBuilder(emrParams);
+    //Modify the environment variables of the process to clear any JDWP options
+    //to avoid -agentlib:jdwp=transport=dt_socket
+    Map<String, String> env = processBuilder.environment();
+    env.remove("_JAVA_OPTIONS");
+    env.remove("JAVA_TOOL_OPTIONS");
+
+    //Combine stdout and stderr
+    processBuilder.redirectErrorStream(true);
+    Process process = processBuilder.start();
+
+    //Capture and log the output of the JAR process
+    BufferedReader reader = new BufferedReader(new InputStreamReader(process.getInputStream()));
+    String line;
+
+    while ((line = reader.readLine()) != null)
+      logger.info("[EMR-local] {}", line);
+
+    int exitCode = process.waitFor();
+
+    if (exitCode != 0)
+      throw new RuntimeException("Local EMR execution failed with exit code " + exitCode + ". Please check the logs.");
+
+    //Upload EMR files, which are stored locally
+    uploadEMRResulstToS3(new File(localTmpOutputsFolder), S3Client.getKeyFromS3Uri(scriptParams.get(1)));
   }
 
   @Override
   public void resume() throws Exception {
     //NOTE: As this step is just a "configuration holder", this method should never actually be called
-    throw new RuntimeException("RunEmrJob#execute() was called.");
+    throw new RuntimeException("RunEmrJob#resume() was called.");
   }
 
   @Override
   public void cancel() throws Exception {
     //NOTE: As this step is just a "configuration holder", this method should never actually be called
-    throw new RuntimeException("RunEmrJob#execute() was called.");
+    throw new RuntimeException("RunEmrJob#cancel() was called.");
   }
 
   @Override
   public boolean validate() throws ValidationException {
+    if (scriptParams == null)
+      throw new ValidationException("ScriptParams are mandatory!"); //TODO: Check if this is really needed for *all* EMR jobs (if not move to according sub-class)
+    if (sparkParams == null)
+      throw new ValidationException("SparkParams are mandatory!"); //TODO: Check if this is really needed for *all* EMR jobs (if not move to according sub-class)
+    if (jarUrl == null)
+      throw new ValidationException("JAR URL is mandatory!");
+    //TODO: Move the ScriptParams length check into the according sub-class
+    if (scriptParams.size() < 2)
+      throw new ValidationException("ScriptParams length is to small!");
+
     return !isInputsExpected() || currentInputsCount(Input.class) > 0;
   }
 
@@ -152,5 +234,115 @@ public class RunEmrJob extends Step<RunEmrJob> {
   public RunEmrJob withInputsExpected(boolean inputsExpected) {
     setInputsExpected(inputsExpected);
     return this;
+  }
+
+  private String getLocalTmpPath(String s3Path) {
+    final String localRootPath = "/tmp/";
+    return localRootPath + s3Path;
+  }
+
+  /**
+   * @param s3Path
+   * @return Local path of tmp directory
+   */
+  private String copyFileFromS3ToLocal(String s3Path) {
+    //Lambda allows writing to /tmp folder - Jar file could be bigger than 512MB
+    try {
+      logger.info("Copy file: '{}' to local.", s3Path);
+      InputStream jarStream = S3Client.getInstance().streamObjectContent(s3Path);
+
+      //Create local target Folder
+      createLocalFolder(Paths.get(s3Path).getParent().toString(), false);
+      Files.copy(jarStream, Paths.get(getLocalTmpPath(s3Path)));
+      jarStream.close();
+    } catch (FileAlreadyExistsException e) {
+      logger.info("File: '{}' already exists locally - skip download.", s3Path);
+    }catch (AmazonS3Exception e){
+      throw new RuntimeException("Can't download File: '" + s3Path + "' for local copy!", e);
+    } catch (IOException e) {
+      throw new RuntimeException("Can't copy File: '" + s3Path + "'!", e);
+    }
+    return getLocalTmpPath(s3Path);
+  }
+
+  /**
+   * @param s3Path
+   * @return Local path of tmp directory
+   */
+  private String copyFolderFromS3ToLocal(String s3Path) {
+    List<S3ObjectSummary> s3ObjectSummaries = S3Client.getInstance().scanFolder(s3Path);
+
+    for (S3ObjectSummary s3ObjectSummary : s3ObjectSummaries) {
+      if (!s3ObjectSummary.getKey().contains("modelBased"))
+        copyFileFromS3ToLocal(s3ObjectSummary.getKey());
+    }
+    return getLocalTmpPath(s3Path);
+  }
+
+  private static void deleteDirectory(File directory) {
+    if (directory.isDirectory()) {
+      //Get all files and directories within the directory
+      File[] files = directory.listFiles();
+      if (files != null) {
+        //Recursively delete each file and subdirectory
+        for (File file : files) {
+          deleteDirectory(file);
+        }
+      }
+    }
+    // Delete the directory or file
+    directory.delete();
+  }
+
+  /**
+   * @param s3Path
+   * @return
+   * @throws IOException
+   */
+  private String createLocalFolder(String s3Path, boolean deleteBefore) throws IOException {
+    Path path = Paths.get(getLocalTmpPath(s3Path));
+
+    //TODO: Use the step ID as prefix within /tmp instead
+    if (deleteBefore)
+      deleteDirectory(path.getParent().toFile());
+
+    Files.createDirectories(path);
+
+    return getLocalTmpPath(s3Path);
+  }
+
+  private void uploadEMRResulstToS3(File emrOutputDir, String s3TargetPath) throws IOException {
+    if (emrOutputDir.exists() && emrOutputDir.isDirectory()) {
+      File[] files = emrOutputDir.listFiles();
+
+      if (files == null) {
+        logger.info("EMR job has not produced any files!");
+        return;
+      }
+
+      for (File file : files) {
+        //TODO: check why this happens
+        if (file.getPath().endsWith("crc"))
+          continue;
+        //TODO: skip _SUCCESS?
+
+        logger.info("Store local file {} to {} ", file, s3TargetPath);
+        //TODO: Check if this is the correct content-type
+        new DownloadUrl()
+                .withContentType("text")
+                .withContent(Files.readAllBytes(file.toPath()))
+                .store(s3TargetPath + "/" + UUID.randomUUID());
+      }
+    }
+  }
+
+  @Override
+  public LambdaBasedStep.AsyncExecutionState getExecutionState() throws LambdaBasedStep.UnknownStateException {
+    throw new UnknownStateException("RunEmrJob runs in SYNC mode only.");
+  }
+
+  @Override
+  public LambdaBasedStep.ExecutionMode getExecutionMode() {
+    return SYNC;
   }
 }
